--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     <div class="container">
         <div id="countdown" class="countdown"></div>
         <div id="exam-info"></div>
-    </div>
+    </div><br>
+    <h1><i style="color:red">NOTE :</i><b>DATACOM MIDSEM AT 5PM TODAY 😂😂😂😂</b></h1>
 
     <script>
         const exams = [
