--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="countdown" class="countdown"></div>
         <div id="exam-info"></div>
     </div><br>
-    <h1><i style="color:red">NOTE :</i><b>DATACOM MIDSEM AT 5PM TODAY 😂😂😂😂</b></h1>
+    <h1 style="margin-left:5px"><i style="color:red">NOTE :</i><b>DATACOM MIDSEM AT 5PM TODAY 😂😂😂😂</b></h1>
 
     <script>
         const exams = [
